# ZeaGeneMap

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  setup.cfg  test_out3_raw.tsv
src/blast/: blast.py
src/chain/: chain.py  crossmap.py
src/ortholog/: ortholog.py
src/synteny/: synteny.py
src/utils/: logger.py  utils.py
src/zgmmodule/blast/: blast.py
src/zgmmodule/chain/: chain.py  crossmap.py
src/zgmmodule/ortholog/: ortholog.py
src/zgmmodule/synteny/: synteny.py
src/zgmmodule/utils/: logger.py  utils.py
tests/: test.py
tests/data/: Orthogroups.tsv  Zm-B73v5.Zv-TEO01.anchor  Zm-B73v5.Zv-TEO01.blast  Zm-B73v5.bed  Zm-B73v5.genelist  Zv-TEO01.Zm-B73v5.anchor  Zv-TEO01.Zm-B73v5.blast  Zv-TEO01.bed  test_result.tsv
