[metadata]
name = ZeaGeneMap
version = 1.3.1
author = WenjieWei
author_email = wjwei9908@gmail.com
description = A python tool for identifying the mapping of genes between two genomes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wjwei-handsome/GeneMap
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Environment :: Console
    Topic :: Scientific/Engineering :: Bio-Informatics
license_files = LICENSE

[options]
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.6
scripts = bin/GeneMap.py
install_requires =
    bx-python
    pandas>=1.3.0
    pybedtools>=0.9.0
    rich
requires =
    bx-python
    pandas>=1.3.0
    pybedtools>=0.9.0
    rich

[options.packages.find]
where=src

[options.package_data]
* = *